# GraspNet-based-on-YOLO-for-specific-object-recognition-and-grasp

./: .gitignore  FlexivRobot.py  README.md  demo.py  demo_wipe.py  grasp_in_controller.py  grasp_out_api.py  grasp_out_controller.py  grasp_shuzhi.py  grasp_ur.py  mop.py  run_robot_perception_detect.py  trajectory_planner.py  wipe_controller.py
.git_backup_broken/: COMMIT_EDITMSG  config  index
.git_backup_broken/refs/heads/: main
Grasp_ZerithC1/: demo_comprison.py  grasp_filter.py  grasp_flexiv.py  grasp_in_api.py  grasp_in_controller.py  grasp_out_api.py  grasp_out_controller.py  impro_grasp_flexiv.py  poses_20251011_224117.json  shijiao.py  wipe_controller.py
dataset/: graspnet_dataset.py
realsense_cail/: FlexivRobot.py  cail_prove.py  circle.py  collected_robot_poses.json  eye_out_hand_charuco_auto.py  eye_out_hand_charuco_auto_rtde.py  flexiv_test.py  get_l.py  get_newpoint.py  get_points.py  get_points_new.py  project_pose_to_image.py  test.py  test_cv.py  test_points.py  urrtde_test.py
robot-stain-perception/: .gitignore  README.md  environment.yml  package.xml  setup.py
robot-stain-perception/config/: multiclass_stain_dataset.yaml
robot-stain-perception/launch/: perception.launch.py
robot-stain-perception/src/perception_node/: perception_api_detect.py  realsense_api.py  run_robot_perception_detect.py
robot-stain-perception/tools/: create_grasp_mask.py  data_collect2.py  generate_binary_mask.py  grasp_mask_api.py  labelme_to_yolo_multiclass.py  predict_single.py  split_yolo_dataset.py
test/: img_shape.py  intrinsic_get.py  read_pose.py  t.py
(+4 files in other folders)
